fix: video transcript links wrapping up

--- a/xmodule/static/css-builtin-blocks/VideoBlockDisplay.css
+++ b/xmodule/static/css-builtin-blocks/VideoBlockDisplay.css
@@ -80,7 +80,6 @@
 .xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .wrapper-handouts,
 .xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .branding,
 .xmodule_display.xmodule_VideoBlock .video .wrapper-video-bottom-section .wrapper-transcript-feedback {
-    flex: 1;
     margin-top: var(--baseline, 20px);
     padding-right: var(--baseline, 20px);
     vertical-align: top;
